[gd_scene load_steps=26 format=3 uid="uid://b71yncaw8ag18"]

[ext_resource type="Script" uid="uid://cdtlinjcepr7j" path="res://Scripts/Enemies/enemy_white_raider.gd" id="1_v5cc0"]
[ext_resource type="Texture2D" uid="uid://cv5kb1qem70jj" path="res://Art/Enemy/Enemy 1-pARRY.png" id="2_mqpak"]
[ext_resource type="Texture2D" uid="uid://ckk10xe7vg2gl" path="res://Art/Enemy/Enemy main.png" id="2_v5cc0"]
[ext_resource type="Texture2D" uid="uid://ba1fxidnjk8ud" path="res://Art/Enemy/Enemy 1-Attack.png" id="2_ymxu1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ueocl"]
atlas = ExtResource("2_ymxu1")
region = Rect2(0, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt6pq"]
atlas = ExtResource("2_ymxu1")
region = Rect2(160, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0enyw"]
atlas = ExtResource("2_ymxu1")
region = Rect2(320, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5avo"]
atlas = ExtResource("2_ymxu1")
region = Rect2(480, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_linoo"]
atlas = ExtResource("2_ymxu1")
region = Rect2(640, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjtbi"]
atlas = ExtResource("2_ymxu1")
region = Rect2(800, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmdaa"]
atlas = ExtResource("2_ymxu1")
region = Rect2(960, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymxu1"]
atlas = ExtResource("2_mqpak")
region = Rect2(0, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fekck"]
atlas = ExtResource("2_mqpak")
region = Rect2(160, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cctcc"]
atlas = ExtResource("2_mqpak")
region = Rect2(320, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6xim"]
atlas = ExtResource("2_mqpak")
region = Rect2(480, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cmju"]
atlas = ExtResource("2_mqpak")
region = Rect2(640, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnf7m"]
atlas = ExtResource("2_mqpak")
region = Rect2(800, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q67jl"]
atlas = ExtResource("2_mqpak")
region = Rect2(960, 0, 160, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_cvnsp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueocl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt6pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0enyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5avo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_linoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjtbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmdaa")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymxu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fekck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cctcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6xim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cmju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnf7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q67jl")
}],
"loop": false,
"name": &"Parry",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v5cc0")
}],
"loop": true,
"name": &"Test",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0iea"]
radius = 11.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5cc0"]
size = Vector2(60, 45)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_6t5aa"]
points = PackedVector2Array(11, -22, 45, -18, 64, -13, 64, -5, 50, 2, 31, 5, 8, 5, 4, 3)

[sub_resource type="Curve" id="Curve_v5cc0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.99999, 0.21348321), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_mqpak"]
colors = PackedColorArray(1, 0, 0, 1, 0.4745098, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_ymxu1"]
colors = PackedColorArray(1, 0.47843137, 0, 1, 1, 1, 0, 1)

[node name="EnemyWhiteRaider" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_v5cc0")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_cvnsp")
animation = &"Parry"

[node name="RayCast2D" type="RayCast2D" parent="Sprite"]
position = Vector2(0, -17)
target_position = Vector2(-150, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_v0iea")

[node name="Attack area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack area"]
position = Vector2(-35, 2)
shape = SubResource("RectangleShape2D_v5cc0")

[node name="SwordHitBox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(26, 1)
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitBox" groups=["Enemy"]]
position = Vector2(-26, -1)
scale = Vector2(-1, 1)
shape = SubResource("ConvexPolygonShape2D_6t5aa")
disabled = true
debug_color = Color(2.0214916e-06, 0.5992533, 0.70622456, 0.41960785)

[node name="PlayerLossSightTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="BloodParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 1.45
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.33
spread = 180.0
gravity = Vector2(0, 120)
initial_velocity_max = 35.14
angular_velocity_max = 267.22
damping_max = 49.485
angle_max = 267.2
scale_amount_curve = SubResource("Curve_v5cc0")
color_ramp = SubResource("Gradient_mqpak")
hue_variation_max = 1.0

[node name="ParryParticles" type="CPUParticles2D" parent="."]
z_index = 4096
position = Vector2(-18, -2)
rotation = -2.8042183
emitting = false
amount = 45
lifetime = 0.58
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 70.305)
initial_velocity_min = 69.16
initial_velocity_max = 107.58
damping_max = 70.103
angle_max = 267.2
scale_amount_curve = SubResource("Curve_v5cc0")
color_ramp = SubResource("Gradient_ymxu1")
hue_variation_max = 1.0

[connection signal="body_entered" from="Attack area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Attack area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="SwordHitBox" to="." method="_on_sword_hit_box_body_entered"]
[connection signal="timeout" from="PlayerLossSightTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Attack_timer" to="." method="on_attack_timer_timeout"]
